# flamingo

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  base.crn  install.sh
docs/: functions.md
inc/: mpc.h  util.h  value.h
include/: config.h  dl.h  env.h  fl_lib.h  flamingo.h  gc.h  lib.h  list.h  map.h  mpc.h  object.h  type.h  util.h
lib/: base.fl  dl.c  fl_aux.c  fl_base.c  fl_math.c  fl_math.h  fl_os.c  fl_os.h  lib.c  libbase.c  libmath.c
lib/linked_list/: list.c  list.h
lib/map/: map.c
lib/math/: fl_math.c  fl_math.h
scripts/: build.mk
src/: base.crn  base.fl  build.mk  builtin.c  env.c  flamingo.c  flamingo.h  gc.c  gc.h  grammar  list.c  main.c  mpc.c  object.c  process.c  type.c  util.c  value.c
src/c/: builtin.c  dl.c  env.c  main.c  map.c  object.c  read.c  util.c
src/c/linked_list/: list.c
src/fl/: base.fl  math.fl
src/linked_list/: list.c  list.h
test/: 1m.fl  calculator.fl  factorial.fl  factorial.gg  fibonacci.fl  helloworld.fl  helloworld.gg  input.fl
test/1m-iterations/: 1m.fl  1m.js  1m.py  1m.rb  results
tests/: factorial.fl  fibonacci.fl  helloworld.crn
